@@ -21,6 +21,7 @@
  * Fix bug where the failure detector can take too long to mark a host 
    down (CASSANDRA-3273)
  * Fix stress COUNTER_GET option (CASSANDRA-3301)
+ * Nodetool no longer leaks threads and closes JMX connections (CASSANDRA-3309)
 
 
 0.8.6
